# uc-intg-stormaudio

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  Dockerfile  README.md  compose.yml  docker-entry.sh  driver.json  pyproject.toml  release-please-config.json  requirements.txt  server.Dockerfile  server.py  setup.sh
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: actionlint.yml  build.yml  lint-pr-title.yml  lint-python.yml  release-please.yml
dev/: Dockerfile  compose.yml  docker-compose.yml
docs/: code_guidelines.md
git-hooks/: pre-push
intg-stormaudio/: config.py  const.py  device.py  discover.py  driver.py  media_player.py  sensor.py  setup.py  stormaudio.py
intg-template/: const.py  discover.py  setup.py
tools/templates/: licenses-header.md
uc_intg_stormaudio/: __init__.py  __main__.py  const.py  device.py  device_attributes.py  device_state.py  discover.py  driver.py  helpers.py  media_player.py  remote.py  select.py  sensor.py  setup.py  simple_commands.py  stormaudio.py
