[project]
name = "uc-intg-stormaudio"
version = "0.4.1"
description = "Unfolded Circle Integration StormAudio"
readme = "README.md"
requires-python = ">=3.11"
license = "MPL-2.0"

authors = [
    { name = "Tino Goratsch", email = "mail@goratschwebdesign.de" }
]

urls.Homepage = "https://github.com/tinogo/uc-intg-stormaudio"
urls.Repository = "https://github.com/tinogo/uc-intg-stormaudio"

dependencies = [
    # Core dependencies
    "ucapi==0.5.1",
    "ucapi-framework==1.4.0",
    "pyee>=9.0",
    # Discovery protocols
    "telnetlib3>=2.0.8",
]
