[project]
name = "uc-intg-stormaudio"
version = "0.25.1"
description = "Unfolded Circle Integration StormAudio"
readme = "README.md"
requires-python = ">=3.11"
license = "MPL-2.0"

authors = [
    { name = "Tino Goratsch", email = "mail@goratschwebdesign.de" }
]

urls.Homepage = "https://github.com/tinogo/uc-intg-stormaudio"
urls.Repository = "https://github.com/tinogo/uc-intg-stormaudio"

dependencies = [
    # Core dependencies
    "ucapi>=0.5.2",
    "ucapi-framework>=1.8.3",
    "pyee>=9.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "flake8-docstrings>=1.7.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
    "pylint>=4.0.4",
]

[project.scripts]
uc-intg-stormaudio = "uc_intg_stormaudio:main"